--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,12 @@ license = { file = "LICENSE" }
 dynamic = ["version"]
 dependencies = [
     "boto3",
+    "boto3-stubs[essential,batch,iam]",
     "dataclasses-json",
     "pandas",
+    "random_word",
     "tabulate",
+    "textual",
     "toml",
 ]
 
@@ -18,9 +21,13 @@ ezbatch-cli = "ezbatch.scripts.cli:ezbatch_cli"
 
 [project.optional-dependencies]
 dev = [
-    "boto3-stubs[essential,batch,iam]",
     "pre-commit",
+    "pytest",
+    "textual-dev",
 ]
+
+[tool.setuptools.packages.find]
+include = ["ezbatch*"]
 
 [build-system]
 requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
